# confidential-desk

./: Anchor.toml  README.md  package.json  tsconfig.json
app/: next.config.ts  package.json  pnpm-lock.yaml
app/app/: confidential_desk.json  globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: balances-card.tsx  borrow-tab.tsx  confidential-lending-desk-view.tsx  desk-icons.tsx  haven-app.tsx  lend-tab.tsx  private-send-tab.tsx  shield-tab.tsx  sol-price-ticker.tsx  wallet-provider.tsx
app/hooks/: use-confidential-lending-desk.ts
app/lib/: confidential_desk.json  confidential_desk.ts  desk-actions.ts  desk-config.ts  desk-math.ts  desk-program.ts  desk-rollup.ts  desk-rpc-policy.ts  ephemeral-connection.ts  ephemeral-rollup-guards.ts  format-shield-amounts.ts  haven-actions.ts  haven-borrow-debug.ts  haven-config.ts  haven-debug-env.ts  haven-desk-helpers.ts  haven-program.ts  haven.json  per-client.ts  per-public.ts  per-tx-wire.ts  (+3 more)
programs/confidential-desk/: Cargo.toml
programs/confidential-desk/src/: errors.rs  ix_accounts.rs  lib.rs  utils.rs
programs/confidential-desk/src/instructions/: borrower.rs  close.rs  desk.rs  espl.rs  health.rs  lender.rs  mod.rs
programs/confidential-desk/src/state/: desk.rs  ledger.rs  mod.rs  position.rs
scripts/: README.md  activate-desk-ledger-er-devnet.cjs  bootstrap-desk-espl-devnet.cjs  disc.py  init-desk-devnet.cjs  init-desk-vaults-er-devnet.cjs  init-pool-devnet.cjs  solana-tx-helpers.cjs  update-oracle-devnet.cjs
tests/: confidential-desk-tee.ts  confidential-desk.ts  desk-test-utils.ts
(+12 files in other folders)
