[package]
name = "confidential-desk"
version = "0.1.0"
description = "Confidential Lending Desk — private positions on PER, settlement on base"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confidential_desk"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["associated_token", "token", "token_2022"] }
ephemeral-rollups-sdk = { version = "0.8.8", features = ["anchor", "access-control", "spl"] }
magicblock-magic-program-api = { version = "0.8.5", default-features = false }
bincode = "1.3"
blake3 = "=1.5.5"
proc-macro-crate = "=3.3.0"
unicode-segmentation = "=1.11.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
